--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,47 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "b3ce172b-a057-4852-acdb-c5376e414d2a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import average_precision_score\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
-    "def calculate_roc_auc_prc(model, data_loader):\n",
-    "    model.eval()\n",
-    "    all_probabilities = []\n",
-    "    all_labels = []\n",
-    "    total_loss = 0\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        for inputs in tqdm(data_loader, leave=False):\n",
-    "            outputs = model(inputs['encoder_input'], inputs['encoder_mask'])\n",
-    "            labels = inputs['label']\n",
-    "            logits = torch.sigmoid(outputs)\n",
-    "            loss = criterion(outputs, labels.float().view(-1,1))\n",
-    "            total_loss += loss.item()\n",
-    "            all_probabilities.append(logits.cpu().numpy())\n",
-    "            all_labels.append(labels.cpu().numpy())\n",
-    "\n",
-    "    logits_all = np.concatenate(all_probabilities)\n",
-    "    labels_all = np.concatenate(all_labels)\n",
-    "    total_loss = total_loss/len(data_loader)\n",
-    "    \n",
-    "    roc_auc = roc_auc_score(labels_all, logits_all)\n",
-    "    auc_prc = average_precision_score(labels_all, logits_all)\n",
-    "    return roc_auc, auc_prc, total_loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "54dcdd8f-b14f-4d9c-b9ce-0bfb41193d5d",
    "metadata": {
     "tags": []
@@ -74,6 +34,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
+    "from utils import MaskedMimicDataSetInHospitalMortality\n",
     "from torch.nn import functional as F\n",
     "\n",
     "from tqdm import tqdm\n",
@@ -129,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c3f8f53a-6240-4253-a0ef-deb276127102",
    "metadata": {
     "tags": []
@@ -342,204 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cdfe9b82-ebb6-48d5-bcd2-8811ccef1868",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of parameters: 56990\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/75, Training Loss: 0.363\n",
-      "Epoch 1/75, Validation Loss: 0.371\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/75, Training Loss: 0.286\n",
-      "Epoch 2/75, Validation Loss: 0.271\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/75, Training Loss: 0.263\n",
-      "Epoch 3/75, Validation Loss: 0.312\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/75, Training Loss: 0.139\n",
-      "Epoch 4/75, Validation Loss: 0.588\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5/75, Training Loss: 0.065\n",
-      "Epoch 5/75, Validation Loss: 0.588\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6/75, Training Loss: 0.058\n",
-      "Epoch 6/75, Validation Loss: 0.637\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7/75, Training Loss: 0.056\n",
-      "Epoch 7/75, Validation Loss: 0.635\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8/75, Training Loss: 0.060\n",
-      "Epoch 8/75, Validation Loss: 0.543\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9/75, Training Loss: 0.051\n",
-      "Epoch 9/75, Validation Loss: 0.543\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10/75, Training Loss: 0.051\n",
-      "Epoch 10/75, Validation Loss: 0.463\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 11/75, Training Loss: 0.045\n",
-      "Epoch 11/75, Validation Loss: 0.596\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 12/75, Training Loss: 0.043\n",
-      "Epoch 12/75, Validation Loss: 0.526\n",
-      "Early stopping after 12 epochs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Model(d_model, num_heads, d_ff, num_variables, N, sinusoidal).to(DEVICE)\n",
-    "criterion = nn.MSELoss()\n",
+    "criterion = nn.MSELoss(reduce=False)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = learning_rate)\n",
     "\n",
     "total_params = sum(p.numel() for p in model.parameters())\n",
@@ -559,10 +331,14 @@
     "            outputs = torch.where(torch.logical_or(pretraining_mask==0,pretraining_mask==-1), torch.tensor(0.0), outputs)\n",
     "            labels = torch.where(torch.logical_or(pretraining_mask==0,pretraining_mask==-1), torch.tensor(0.0), batch['labels'])\n",
     "            loss = criterion(outputs, labels)\n",
+    "            loss = torch.where(pretraining_mask==1, loss, torch.zeros_like(loss))\n",
+    "            loss = torch.sum(loss)\n",
+    "            N = torch.sum(pretraining_mask == 1).item()\n",
+    "            loss /= N\n",
     "            total_loss += loss.item()\n",
     "    return total_loss/len(data_loader)\n",
     "\n",
-    "for epoch in range(epochs):\n",
+    "for epoch in range(1):\n",
     "    total_loss = 0\n",
     "    model.train()\n",
     "    n = 0\n",
@@ -574,6 +350,10 @@
     "        outputs = torch.where(torch.logical_or(pretraining_mask==0,pretraining_mask==-1), torch.tensor(0.0), outputs)\n",
     "        labels = torch.where(torch.logical_or(pretraining_mask==0,pretraining_mask==-1), torch.tensor(0.0), batch['labels'])\n",
     "        loss = criterion(outputs, labels)\n",
+    "        loss = torch.where(pretraining_mask==1, loss, torch.zeros_like(loss))\n",
+    "        loss = torch.sum(loss)\n",
+    "        N = torch.sum(pretraining_mask == 1).item()\n",
+    "        loss /= N\n",
     "        total_loss += loss.item()\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -599,173 +379,95 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7f72a9-9723-4293-acf9-980cd08a74a3",
+   "id": "8c664a65-533a-451f-ac94-708a2d584004",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "model = Model(d_model, num_heads, d_ff, num_variables, N).to(DEVICE)"
+    "for batch in train_dataloader_inhospital:\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e42ba6a-e6a7-4fd0-b7e8-cb12dd7f8c3a",
+   "id": "e17d4da4-287c-40e5-9551-79293b84c0c6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "out = model(batch['encoder_input'], batch['encoder_mask'])"
+    "batch['encoder_input'][2][0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c621d8c-93ac-48a5-8f00-e7c3682f93c7",
+   "id": "ecc799e1-b08d-482a-a799-545d80253016",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "out.shape"
+    "batch['pretraining_mask'][0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35190186-4afc-4938-ba4b-fbbf6482a04c",
+   "id": "a143537a-f7c3-4632-9e98-53ed48281179",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "mask = batch['pretraining_mask']"
+    "outputs = model(batch['encoder_input'], batch['encoder_mask'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9583d87-b1bd-4fb8-89b1-aa95c94c4f55",
+   "id": "ba16d08a-8b9e-436e-bcf1-0c757148227d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "batch['pretraining_mask'].shape"
+    "outputs[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e3bf382-75c8-4e3a-83ef-00427262dc87",
+   "id": "c1762c0e-4f16-40ff-b950-fd41f75da821",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "mask = mask.to(DEVICE)"
+    "!gpustat"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecdde395-4112-455f-82ea-a2ea62473191",
+   "id": "1c3fb1ec-e090-4bff-8280-c7a0420ce21a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "batch['encoder_input'][2].shape"
+    "!CUDA_VISIBLE_DEVICES=0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2e3a7d-c2b7-479b-81df-c76dbb487867",
-   "metadata": {
-    "tags": []
-   },
+   "id": "a68ba489-5836-451a-a21f-7152d41b4e41",
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "out = torch.where(torch.logical_or(mask==0,mask==-1), torch.tensor(0.0), out)\n",
-    "# output = torch.where((mask==0) or (mask==-1), torch.tensor(0.0), output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69031430-320a-44bc-99e0-0e6b81978bca",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4e599d5-167a-410b-997c-df7e1a3d6124",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "out.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6cea2c0-31d3-4bed-9dc9-05220f625d86",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "torch.logical_or(mask==0, mask==1).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82b5259e-2f9e-4ed1-89aa-ba64da0d311a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "out.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8e2fac7-df42-489f-8148-86fa13b268a0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "torch.rand(100) < 0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3d39463-588b-41d5-85c8-1786c43d8f25",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "\n",
-    "def mask()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
